RESOLVED FIXED269403
[ Ventura Debug WK2 arm64 EWS ] ASSERTION FAILED: m_shutdown in WebKit::RemoteMediaResource::~RemoteMediaResource() seen with http/tests/media/hls/track-in-band-multiple-cues.html
https://bugs.webkit.org/show_bug.cgi?id=269403
Summary [ Ventura Debug WK2 arm64 EWS ] ASSERTION FAILED: m_shutdown in WebKit::Remot...
Robert Jenner
Reported 2024-02-14 13:43:56 PST
http/tests/media/hls/track-in-band-multiple-cues.html is crashing on Ventura Debug WK2 arm64 EWS queue, making run times on EWS longer observed at this test run: https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Sonoma-Debug-WK2-Tests-EWS/f312ef40-11942/results.html This test does appear to be constantly crashing on Ventura WK1 in post-commit testing, but not anywhere else in post commit: HISTORY URL: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fmedia%2Fhls%2Ftrack-in-band-multiple-cues.html It appears the crash signature is: Thread 20 Crashed:: Dispatch queue: PlatformMediaResourceLoader 0 com.apple.JavaScriptCore 0x1393af110 WTFCrash 1 com.apple.WebKit 0x11ceed5f0 WTFCrashWithInfo(int, char const*, char const*, int) 2 com.apple.WebKit 0x11e0f05e0 WebKit::RemoteMediaResource::~RemoteMediaResource() 3 com.apple.WebKit 0x11e0f06a0 WebKit::RemoteMediaResource::~RemoteMediaResource() 4 com.apple.WebKit 0x11e0f06cc WebKit::RemoteMediaResource::~RemoteMediaResource() With the full crash log at: https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Sonoma-Debug-WK2-Tests-EWS/f312ef40-11942/http/tests/media/hls/track-in-band-multiple-cues-crash-log.txt
Attachments
Crashlog archive (63.77 KB, text/plain)
2024-02-14 13:44 PST, Robert Jenner
no flags
Robert Jenner
Comment 1 2024-02-14 13:44:30 PST
Created attachment 469865 [details] Crashlog archive
Radar WebKit Bug Importer
Comment 2 2024-02-14 13:45:00 PST
EWS
Comment 3 2024-02-14 13:51:37 PST
Test gardening commit 274657@main (fd87eec432d8): <https://commits.webkit.org/274657@main> Reviewed commits have been landed. Closing PR #24455 and removing active labels.
Ryan Haddad
Comment 4 2024-02-14 14:25:19 PST
ASSERTION FAILED: m_shutdown /Volumes/Data/worker/macOS-AppleSilicon-Sonoma-Debug-Build-EWS/build/Source/WebKit/GPUProcess/media/RemoteMediaResource.cpp(56) : virtual WebKit::RemoteMediaResource::~RemoteMediaResource() 1 0x1393af108 WTFCrash 2 0x11ceed5f0 std::__1::span<unsigned char const, 18446744073709551615ul>::span[abi:v160006]<unsigned char const*>(unsigned char const*, unsigned long) 3 0x11e0f05e0 WebKit::RemoteMediaResource::~RemoteMediaResource() 4 0x11e0f06a0 WebKit::RemoteMediaResource::~RemoteMediaResource() 5 0x11e0f06cc WebKit::RemoteMediaResource::~RemoteMediaResource() 6 0x2823bdaa4 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::PlatformMediaResource, (WTF::DestructionThread)0>() const::'lambda'()::operator()() const 7 0x2823bda44 void WTF::ThreadSafeWeakPtrControlBlock::strongDeref<WebCore::PlatformMediaResource, (WTF::DestructionThread)0>() const 8 0x2823bd8fc WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::PlatformMediaResource, (WTF::DestructionThread)0>::deref() const 9 0x2823bd8a4 WTF::DefaultRefDerefTraits<WebCore::PlatformMediaResource>::derefIfNotNull(WebCore::PlatformMediaResource*) 10 0x2823bd864 WTF::RefPtr<WebCore::PlatformMediaResource, WTF::RawPtrTraits<WebCore::PlatformMediaResource>, WTF::DefaultRefDerefTraits<WebCore::PlatformMediaResource>>::~RefPtr() 11 0x2823a7fd8 WTF::RefPtr<WebCore::PlatformMediaResource, WTF::RawPtrTraits<WebCore::PlatformMediaResource>, WTF::DefaultRefDerefTraits<WebCore::PlatformMediaResource>>::~RefPtr() 12 0x286393454 -[WebCoreNSURLSessionDataTask resume]::$_17::operator()()::'lambda'()::operator()()::'lambda'()::~() 13 0x286392910 -[WebCoreNSURLSessionDataTask resume]::$_17::operator()()::'lambda'()::operator()()::'lambda'()::~() 14 0x286392f18 WTF::Detail::CallableWrapper<-[WebCoreNSURLSessionDataTask resume]::$_17::operator()()::'lambda'()::operator()()::'lambda'(), void>::~CallableWrapper() 15 0x286392e04 WTF::Detail::CallableWrapper<-[WebCoreNSURLSessionDataTask resume]::$_17::operator()()::'lambda'()::operator()()::'lambda'(), void>::~CallableWrapper() 16 0x286392e30 WTF::Detail::CallableWrapper<-[WebCoreNSURLSessionDataTask resume]::$_17::operator()()::'lambda'()::operator()()::'lambda'(), void>::~CallableWrapper() 17 0x13b12d46c std::__1::default_delete<WTF::Detail::CallableWrapperBase<void>>::operator()[abi:v160006](WTF::Detail::CallableWrapperBase<void>*) const 18 0x13b12d420 std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void>>>::reset[abi:v160006](WTF::Detail::CallableWrapperBase<void>*) 19 0x13b12d3a8 std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void>>>::~unique_ptr[abi:v160006]() 20 0x13b2d6e3c std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void>>>::~unique_ptr[abi:v160006]() 21 0x13b12d36c WTF::Function<void ()>::~Function() 22 0x13b2cd88c WTF::Function<void ()>::~Function() 23 0x13952e934 WTF::(anonymous namespace)::DispatchWorkItem::~DispatchWorkItem() 24 0x13952e8e0 WTF::(anonymous namespace)::DispatchWorkItem::~DispatchWorkItem() 25 0x13952d598 void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(void*) 26 0x18d4e3910 _dispatch_client_callout 27 0x18d4eaea4 _dispatch_lane_serial_drain 28 0x18d4eb9d4 _dispatch_lane_invoke 29 0x18d4f661c _dispatch_root_queue_drain_deferred_wlh 30 0x18d4f5e90 _dispatch_workloop_worker_thread 31 0x18d68d114 _pthread_wqthread com.apple.WebKit.GPU.Development terminated (pid 20750) for reason: crash
Jean-Yves Avenard [:jya]
Comment 5 2024-02-22 02:29:08 PST
EWS
Comment 6 2024-02-22 20:20:54 PST
Committed 275217@main (08cf48f399ff): <https://commits.webkit.org/275217@main> Reviewed commits have been landed. Closing PR #24942 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.