Source/WebCore/platform/network/cocoa/WebCoreNSURLSession.h
@@ -132,7 +132,7 @@ WEBCORE_EXPORT @interface WebCoreNSURLSession : NSObject {
 @interface WebCoreNSURLSessionDataTask : NSObject {
     WeakObjCPtr<WebCoreNSURLSession> _session; // Accesssed from operation queue, main and loader thread. Must be accessed through Obj-C property.
     RefPtr<WTF::WorkQueue> _targetQueue;
-    RefPtr<WebCore::PlatformMediaResource> _resource; // Accesssed from main and loader thread. Must be accessed through Obj-C property.
+    RefPtr<WebCore::PlatformMediaResource> _resource; // Accesssed from loader thread.
     RetainPtr<NSURLResponse> _response; // Set on operation queue.
     NSUInteger _taskIdentifier;
     RetainPtr<NSURLRequest> _originalRequest; // Set on construction, never modified.
@@ -145,6 +145,7 @@ WEBCORE_EXPORT @interface WebCoreNSURLSession : NSObject {
     RetainPtr<NSError> _error; // Unused, always nil.
     RetainPtr<NSString> _taskDescription; // Only set / read on the user's thread.
     float _priority;
+    uint32_t _resumeSessionID; // Accesssed from loader thread.
 }
 
 @property NSUInteger taskIdentifier;
